<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbarAjustes"
        style="@style/Widget.MaterialComponents.Toolbar.Primary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="Ajustes" />

    <TextView
        android:id="@+id/txtOrdenacao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/ordenacao"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarAjustes" />

    <RadioGroup
        android:id="@+id/radioGroupOrdenacao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtOrdenacao">

        <RadioButton
            android:id="@+id/radioOrdenacaoAZ"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/alfabetica_az" />

        <RadioButton
            android:id="@+id/radioOrdenacaoZA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/alfabetica_za" />

        <RadioButton
            android:id="@+id/radioOrdenacaoInsercao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ordem_insercao" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>